--- a/sass/components/productIntro/productImages/_enlargedImage.scss
+++ b/sass/components/productIntro/productImages/_enlargedImage.scss
@@ -43,6 +43,7 @@
                 height: 510px;
                 position: absolute;
                 white-space: nowrap;
+                display: block;
             }
         
             .swiper-icon-left {
